--- a/css/Style_index1.css
+++ b/css/Style_index1.css
@@ -1,9 +1,9 @@
 body{
 
-	background-image: url("../img/BgIndex1.jpg");
-	 background-size: cover;
+	background-image: url("../img/WorkSpace.PNG");
+	 background-size:cover;
+	 font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
 }
-
 
 
 .d1{
@@ -15,32 +15,35 @@ body{
 }
 
 .d1 h1{
-	font-family: sans-serif;
-	font-size: 250%;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: 280%;
+	color:#93777d;
 }
 
-.d1 h2{
-	font-family: sans-serif;
-	font-size: 150%;
-}
 
 #btn1{
-	padding: 1rem 3rem;
-	background: #496f8d;
-	color: white;
-	font-size: 1rem;
-	cursor: pointer;
-	border-radius: 70%;
+	padding: 20px 30px;
+    background: #95737bdb;
+    color: #f1f7ff;
+    font-size: 1rem;
+	font-weight:200;
+    cursor: pointer;
+    border: none;
+    border-radius: 10%;
 }
 
 #btn1:hover{
-	background: #bec0c1;
-	color: black;
-
+	background: #95737b91;
 }
 
 #b1{
+font-family:Arial, Helvetica, sans-serif;
  text-decoration: none;
- color: white;
-
+ color: #fcfdfe;
 }
+
+#b1:hover{
+	text-decoration: none;
+	color: #ffffff;
+	font-weight: bold;
+   }
