--- a/css/Style_index1.css
+++ b/css/Style_index1.css
@@ -1,29 +1,36 @@
-body{
-
-	background-image: url("../img/WorkSpace.PNG");
-	 background-size:cover;
-	 font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-
-.d1{
-	min-height: 90vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-    align-items: center;
+h2 {
+  font-size: 30px;
 }
-
-.d1 h1{
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 280%;
-	color:#93777d;
+.image {
+  background-image: url("../img/landing.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
 }
-
-
+.text {
+  color: #eeeeee;
+  font-weight: bold;
+  border: 3px solid #cccccc;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
 #btn1{
-	padding: 20px 30px;
-    background: #95737bdb;
+	padding: 12px 35px;
+    background: #818289;
     color: #f1f7ff;
     font-size: 1rem;
 	font-weight:200;
@@ -33,17 +40,33 @@ body{
 }
 
 #btn1:hover{
-	background: #95737b91;
+	background: #757780;
 }
-
 #b1{
-font-family:Arial, Helvetica, sans-serif;
- text-decoration: none;
- color: #fcfdfe;
-}
+	font-family:Arial, Helvetica, sans-serif;
+	 text-decoration: none;
+	 color: #030404;
+	}
 
-#b1:hover{
-	text-decoration: none;
-	color: #ffffff;
+.connexion{
+	color: #eeeeee;
 	font-weight: bold;
-   }
+	position: absolute;
+	top: 70%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 80%;
+	text-align: center;
+
+}
+.txt {
+	color: #cccccc;
+	font-weight: bold;
+	position: absolute;
+	top: 85%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 80%;
+	padding: 20px;
+	text-align: center;
+  }
