--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body {
     font-weight: normal;
     font-size: 14px;
     color: #71748d;
-    background-color: #efeff6;
+    background-color: #96969a;
     -webkit-font-smoothing: antialiased;
 }
 
